added new responsive behaviour

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 
+    <!-- Navbar -->
     <nav class="navbar">
         <div class="nav-container">
             <span class="logo">Ismael Santana</span>
@@ -22,6 +23,7 @@
         </div>
     </nav>
 
+    <!-- Hero -->
     <section class="hero">
         <h1>Data Engineer | Cloud & Big Data</h1>
         <p>
@@ -35,67 +37,67 @@
         </div>
     </section>
 
+    <!-- Tech Stack -->
     <section class="tech-stack">
-    <h2>Tech Stack</h2>
+        <h2>Tech Stack</h2>
 
-    <div class="stack-grid">
-        <div class="stack-item">
-            <img src="assets/icons/googlecloud.svg" alt="Google Cloud" />
-            <span>Google Cloud</span>
-        </div>
-
-        <div class="stack-item">
-            <img src="assets/icons/googlebigquery.svg" alt="BigQuery" />
-            <span>BigQuery</span>
-        </div>
-
-        <div class="stack-item">
-            <img src="assets/icons/python.svg" alt="Python" />
-            <span>Python</span>
-        </div>
-
-        <div class="stack-item">
-            <img src="assets/icons/github.svg" alt="GitHub" />
-            <span>Git / GitHub</span>
-        </div>
-        
-        <div class="stack-item">
-            <img src="assets/icons/docker.svg" alt="Docker" />
-            <span>Docker</span>
-        </div>
-
-        <div class="stack-item">
-            <img src="assets/icons/linux.svg" alt="Linux" />
-            <span>Linux</span>
-        </div>
-        
-        <div class="stack-item">
-            <img src="assets/icons/jupyter.svg" alt="JupyterNotebook" />
-            <span>Jupyter Notebook</span>
-        </div>
-
-        <div class="stack-item">
-            <img src="assets/icons/apacheairflow.svg" alt="ApacheAirflow" />
-            <span>Apache Airflow</span>
-        </div>
-
-        <section class="contact-strip">
-            <div class="divider"></div>
-
-            <div class="social-icons">
-                <a href="https://www.linkedin.com/in/ismael-santana-9a898a16a"
-                target="_blank">
-                    <img src="assets/icons/linkedin.svg" alt="LinkedIn" />
-                </a>
-
-                <a href="mailto:ismaelsantparra@gmail.com">
-                    <img src="assets/icons/gmail.svg" alt="Email" />
-                </a>
+        <div class="stack-grid">
+            <div class="stack-item">
+                <img src="assets/icons/googlecloud.svg" alt="Google Cloud" />
+                <span>Google Cloud</span>
             </div>
-        </section>
 
-    </div>
-</section>
+            <div class="stack-item">
+                <img src="assets/icons/googlebigquery.svg" alt="BigQuery" />
+                <span>BigQuery</span>
+            </div>
+
+            <div class="stack-item">
+                <img src="assets/icons/python.svg" alt="Python" />
+                <span>Python</span>
+            </div>
+
+            <div class="stack-item">
+                <img src="assets/icons/github.svg" alt="GitHub" />
+                <span>Git / GitHub</span>
+            </div>
+
+            <div class="stack-item">
+                <img src="assets/icons/docker.svg" alt="Docker" />
+                <span>Docker</span>
+            </div>
+
+            <div class="stack-item">
+                <img src="assets/icons/linux.svg" alt="Linux" />
+                <span>Linux</span>
+            </div>
+
+            <div class="stack-item">
+                <img src="assets/icons/jupyter.svg" alt="Jupyter Notebook" />
+                <span>Jupyter Notebook</span>
+            </div>
+
+            <div class="stack-item">
+                <img src="assets/icons/apacheairflow.svg" alt="Apache Airflow" />
+                <span>Apache Airflow</span>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact -->
+    <section class="contact-strip">
+        <div class="divider"></div>
+
+        <div class="social-icons">
+            <a href="https://www.linkedin.com/in/ismael-santana-9a898a16a" target="_blank">
+                <img src="assets/icons/linkedin.svg" alt="LinkedIn" />
+            </a>
+
+            <a href="mailto:ismaelsantparra@gmail.com">
+                <img src="assets/icons/gmail.svg" alt="Email" />
+            </a>
+        </div>
+    </section>
 
 </body>
 </html>
