--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects - Ismael Santana</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/projects.css">
